--- a/static/mycss/christmas.css
+++ b/static/mycss/christmas.css
@@ -23,7 +23,7 @@ body {
 }
 
 
-.containeer-Christmas .circle {
+.containeer-Christmas .circle-dot {
     position: absolute;
     top: 10%;
     left: 50%;
@@ -34,7 +34,7 @@ body {
     border-radius: 50%;
 }
 
-.containeer-Christmas .circle::before {
+.containeer-Christmas .circle-dot::before {
     content: '';
     position: absolute;
     inset: -200px -300px;
@@ -55,8 +55,8 @@ body {
     }
 }
 
-.containeer-Christmas .circle::after {
-    content: 'Happy Christmas and Happy New Year';
+.containeer-Christmas .circle-dot::after {
+    content: 'Merry Christmas and Happy New Year';
     position: absolute;
     inset: -125px -200px;
     font-size: 3.2em;
@@ -103,7 +103,7 @@ a {
     border-radius: 10px;
     padding: 10px;
     transform: translateY(200px);
-    margin-top: 50px;
+    margin-top: 250px;
     z-index: 2;
     text-decoration: none;
     color: #000;
@@ -113,4 +113,104 @@ a {
 a:hover {
     background: #cf0000;
     color: #fff;
+}
+
+
+#time {
+    display: flex;
+    gap: 30px;
+    margin-top: 50px;
+}
+
+#time .circle {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#time .circle svg {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    transform: rotate(270deg);
+}
+
+#time .circle svg circle {
+    width: 100%;
+    height: 100%;
+    fill: transparent;
+    stroke-width: 8;
+    stroke: #282828;
+    transform: translate(5px, 5px);
+}
+
+#time .circle svg circle:nth-child(2) {
+    stroke: var(--clr);
+    stroke-dasharray: 440;
+    stroke-dashoffset: 440;
+}
+
+#time div {
+    position: absolute;
+    text-align: center;
+    font-weight: 500;
+    color: #fff;
+    font-size: 1.5em
+}
+
+#time div span {
+    position: absolute;
+    transform: translateX(-50%) translateY(-5px);
+    font-size: 0.5em;
+    font-weight: 300;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+}
+
+#time .dot {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    z-index: 1000;
+}
+
+#time .dot::before {
+    content: '';
+    position: absolute;
+    top: -3px;
+    width: 15px;
+    height: 15px;
+    background: var(--clr);
+    border-radius: 50%;
+    box-shadow: 0 0 20px var(--clr), 0 0 60px var(--clr);
+}
+.newyear {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    display: none;
+}
+
+.newyear img {
+    position: absolute;
+    top: -220px;
+    width: 300px;
+}
+
+.newyear h2 {
+    font-size: 6em;
+    color: #fff;
+}
+
+.newyear h2:nth-child(2) {
+    margin-top: 80px;
 }
