--- a/templates/addcontact.html
+++ b/templates/addcontact.html
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group">
               <label for="phone">เบอร์โทรศัพท์มือถือ:</label>
-              <input type="text" class="form-control" id="phone" pattern="[0-9\s]*" maxlength="10" minlength="10" name="phone">
+              <input type="text" class="form-control" id="phone"  name="phone">
             </div>
             <div class="form-group">
               <label>ตำแหน่ง:</label>
@@ -183,6 +183,18 @@
               <label class="custom-control-label" for="managerapprove0">Approve การขอลางาน</label>
             </div>
           </div>
+
+          <div class="form-group">
+            <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
+              <input type="checkbox" class="custom-control-input" id="write_post" name="write_post" value="1">
+              <label class="custom-control-label" for="write_post">เขียนบทความ</label>
+            </div>
+            <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success" hidden>
+              <input type="checkbox" class="custom-control-input" id="write_post0" name="write_post" value="0" checked>
+              <label class="custom-control-label" for="write_post">เขียนบทความ</label>
+            </div>
+          </div>
+
         </div>
         <!-- /.card-body -->
         <div class="card-footer">
