--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -343,6 +343,7 @@
                     <i class="far fa-dot-circle nav-icon text-info"></i>
                     <p>MCU</p>
                   </a>
+                  <span class="addhelpdesk" data-toggle="modal" data-target="#helpdesk" data-whatever="@fat"></span>
 
                 </li>
                 {% else %}
@@ -351,6 +352,7 @@
                     <i class="far fa-circle nav-icon text-info"></i>
                     <p>MCU</p>
                   </a>
+                  <span class="addhelpdesk" data-toggle="modal" data-target="#helpdesk" data-whatever="@fat"></span>
 
                 </li>
                 {% endif %}
@@ -444,6 +446,7 @@
                   แจ้งซ่อม IT
                 </p>
               </a>
+              <span class="addhelpdesk" data-toggle="modal" data-target="#helpdesk" data-whatever="@fat"></span>
             </li>
             {% else %}
             <li class="nav-item addli">
@@ -453,6 +456,7 @@
                   แจ้งซ่อม IT
                 </p>
               </a>
+              <span class="addhelpdesk" data-toggle="modal" data-target="#helpdesk" data-whatever="@fat"></span>
             </li>
             {% endif %}
             <!------------------------------------------------------------------------------>
