--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -780,7 +780,7 @@
                     <textarea id="deteil" type="deteil" class="form-control" name="detail" rows="2" cols="63" required></textarea>
                   </div>
                   <div class="form-group">
-                    <input type="file" class="form-control" name="file" accept="image/x-png,image/gif,image/jpeg" onchange="readURL(this);">
+                    <input type="file" class="form-control" name="file" accept="image/x-png,image/gif,image/jpeg,image/png" onchange="readURL(this);">
                     <img id="blah" src="" alt="" class="img-thumbnail" />
                   </div>
                   <input type="text" class="form-control" name="jobstatus" value="0" hidden>
