--- a/templates/returngoods.html
+++ b/templates/returngoods.html
@@ -117,9 +117,9 @@
 
         </div>
 
-        <input type="text" name="idgoods" value="{{ datas.12 }}" >
-        <input type="text" name="returnborrow" value="0" >
-        <input type="text" name="returngoods" value="1" >
+        <input type="text" name="idgoods" value="{{ datas.12 }}" hidden>
+        <input type="text" name="returnborrow" value="0" hidden>
+        <input type="text" name="returngoods" value="1" hidden>
         <input type="text" name="itreturn" value="{{ session['fname'] }}" hidden>
 
         <div class="col-12" style="margin-top:1rem">
